Added code from spikes. Refactored to use the ServiceDirectory.Shared and SharedKernel packages.

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
@@ -16,7 +16,9 @@
     <div class="cards">
       <div class="card">
         <h2 class="govuk-heading-m">
-            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-button" data-module="govuk-button">
+            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-button" data-module="govuk-button">*@
+            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" class="govuk-button" data-module="govuk-button">
+            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">*@
                 Add a service
             </a>
         </h2>
@@ -41,7 +43,8 @@
                         <td class="govuk-table__cell">@item.Description</td>
                         <td class="govuk-table__cell">@item.Status</td>
                         <td class="govuk-table__cell">
-                            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-id="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>
+                            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-id="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>*@
+                            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>
                         </td>
                     </tr>
                 }
