--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_CookieBanner.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_CookieBanner.cshtml
@@ -1,4 +1,4 @@
-﻿@model             ICookieBannerViewModel
+﻿@model WebUI.Models.ICookieBannerViewModel
 
 <div data-module="cookie-banner" role="region" aria-label="cookie banner" class="das-cookie-banner__wrap">
     <div class="das-cookie-banner">
