--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Footer.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿@* Generator: MvcView<object> *@
-@model             IFooterViewModel
-@    using WebUI.Models.Links
+@model WebUI.Models.IFooterViewModel
+@using WebUI.Models.Links
 
 @if (Model.UseLegacyStyles)
 {
