Fixed Header and footer

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Footer.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿@* Generator: MvcView<object> *@
-@model WebUI.Models.IFooterViewModel
-@using WebUI.Models.Links
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Models.IFooterViewModel
+@using FamilyHubs.ServiceDirectoryAdminUi.Ui.Models.Links
 
 @if (Model.UseLegacyStyles)
 {
