--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebUI.Models.Links
+﻿@using FamilyHubs.ServiceDirectoryAdminUi.Ui.Models.Links
 
 <header class="govuk-header das-header--no-border" role="banner" data-module="header">
         <div class="govuk-header__container govuk-width-container">
