--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferDetail.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferDetail.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id:Guid}"
-@model             LocalOfferDetailModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.LocalOfferDetailModel
 @{
 }
 
