--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model             InPersonWhereModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.InPersonWhereModel
 @{
 }
 
