--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OrganisationDetail.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OrganisationDetail.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model             OrganisationDetailModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.OrganisationDetailModel
 @{
 }
 
