--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
