--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model             CheckServiceDetailsModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.CheckServiceDetailsModel
 @{
 }
 
