--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ListOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ListOrganisations.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model             ListOrganisationsModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.ListOrganisationsModel
 @{
 }
 
