--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model             ServiceDeliveryTypeModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.ServiceDeliveryTypeModel
 @{
 }
 
