--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PrivacyModel
+@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
 }
