New GDS styling setup. Styling fixed for index and login page

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
@@ -6,8 +6,8 @@
                 @Html.Raw(Model.RenderLink<GovUk>())
             </div>
             <div class="govuk-header__content">
-                @Html.Raw(Model.RenderLink<HomeLink>()) &nbsp;&nbsp;&nbsp;
-                @Html.Raw(Model.RenderLink<OrganisationAdminLink>())
+                @*@Html.Raw(Model.RenderLink<HomeLink>()) &nbsp;&nbsp;&nbsp;*@
+                @*@Html.Raw(Model.RenderLink<OrganisationAdminLink>())*@
 				@*@Html.Raw(Model.RenderLink<WeatherForecast>()) &nbsp;&nbsp;&nbsp;
 				@Html.Raw(Model.RenderLink<ToDoSelection>())*@
             </div>
