--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
@@ -3,9 +3,9 @@
 @{
 }
 
-<a asp-page="/OrganisationAdmin/Start" class="govuk-back-link">Back</a>
+@*<a asp-page="/OrganisationAdmin/Start" class="govuk-back-link">Back</a>*@
 
-<main class="govuk-main-wrapper " id="main-content" role="main">
+<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
