--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/index.cshtml
@@ -3,9 +3,9 @@
 @{
 }
 
-<a asp-page="/Index" class="govuk-back-link">Back</a>
+@*<a asp-page="/Index" class="govuk-back-link">Back</a>*@
 
-<main class="govuk-main-wrapper " id="main-content" role="main">
+<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
@@ -17,7 +17,7 @@
         <div class="govuk-inset-text">
           To use this, your local authority must have approved your application to join the directory.
         </div>
-        <a asp-page="/OrganisationAdmin/SignIn" class="govuk-button" data-module="govuk-button">
+        <a asp-page="/OrganisationAdmin/SignIn" class="govuk-button govuk-button--start" data-module="govuk-button">
             Start now
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
               <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
