--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
@@ -18,13 +18,13 @@
           <div class="govuk-form-group"> <label for="password" class="govuk-label">Password</label>
             <input type="password" name="password" id="password" class="govuk-input govuk-!-width-one-half" value="@Model.Password" autocomplete="current-password">
           </div>
-          <p><a href="#" onclick="showAlert();">Create an account</a></p>
+          <p><a href="#" onclick="fhgov.showAlert('Sorry, this feature has not been added to this prototype yet');">Create an account</a></p>
           <button type="submit" class="govuk-button">
             Continue
           </button>
         </form>
         <h2 class="govuk-heading-m govuk-!-margin-top-6">Problems signing in</h2>
-        <p><a class="govuk-link" onclick="showAlert();" href="#" id="forgotten-password">I have forgotten my password</a></p>
+        <p><a class="govuk-link" onclick="fhgov.showAlert('Sorry, this feature has not been added to this prototype yet')" href="#" id="forgotten-password">I have forgotten my password</a></p>
       </div>
     </div>
 </main>
