Styling for the welcome page.

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using FamilyHubs.ServiceDirectoryAdminUi.Ui.Extensions
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
