--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
@@ -3,52 +3,58 @@
 @{
 }
 
-<a asp-page="/OrganisationAdmin/OrganisationDetail" asp-route-id="@Model.OrganisationViewModel.Id" class="govuk-back-link">Back</a>
+@*<a asp-page="/OrganisationAdmin/OrganisationDetail" asp-route-id="@Model.OrganisationViewModel.Id" class="govuk-back-link">Back</a>*@
 
-<main class="govuk-main-wrapper " id="main-content" role="main">
-    <h1 class="govuk-heading-xl">@Model.OrganisationViewModel.Name</h1>
+<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            @*<h1 class="govuk-heading-xl">@Model.OrganisationViewModel.Name</h1>*@
+            <h1 class="govuk-heading-xl">Home-Start Tower Hamlets</h1>
 
-    <input asp-for="@Model.StrOrganisationViewModel" type="hidden" >
 
-    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-    <h2 class="govuk-heading-l">Services</h2>
-    <p class="govuk-caption-m">Add and remove services provided by your organisation.</p>
-    <div class="cards">
-      <div class="card">
-        <h2 class="govuk-heading-m">
-            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-button" data-module="govuk-button">*@
-            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" class="govuk-button" data-module="govuk-button">
-            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">*@
-                Add a service
-            </a>
-        </h2>
-        <p class="govuk-body-s">Add details for a service provided by your organisation.</p>
-      </div>
+            <input asp-for="@Model.StrOrganisationViewModel" type="hidden" >
+
+            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+            <h2 class="govuk-heading-l">Services</h2>
+            <p class="govuk-caption-m">Add and remove services provided by your organisation.</p>
+            <div class="cards">
+              <div class="card">
+                <h2 class="govuk-heading-m">
+                    @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-button" data-module="govuk-button">*@
+                    <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button">
+                    @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">*@
+                        Add a service
+                    </a>
+                </h2>
+                <p class="govuk-body-s">Add details for a service provided by your organisation.</p>
+              </div>
+            </div>
+
+            <table class="govuk-table" style="display: none;">
+                    <thead class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                            <th scope="col" class="govuk-table__header">Name</th>
+                            <th scope="col" class="govuk-table__header">Description</th>
+                            <th scope="col" class="govuk-table__header">Status</th>
+                            <th scope="col" class="govuk-table__header">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                        @foreach (var item in @Model.Services)
+                        {
+                            <tr class="govuk-table__row">
+                                <th scope="row" class="govuk-table__header">@item.Name</th>
+                                <td class="govuk-table__cell">@item.Description</td>
+                                <td class="govuk-table__cell">@item.Status</td>
+                                <td class="govuk-table__cell">
+                                    @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-id="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>*@
+                                    <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>
+                                </td>
+                            </tr>
+                        }
+                </tbody>
+            </table>
+        </div>
     </div>
-
-    <table class="govuk-table" style="display: none;">
-            <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header">Name</th>
-                    <th scope="col" class="govuk-table__header">Description</th>
-                    <th scope="col" class="govuk-table__header">Status</th>
-                    <th scope="col" class="govuk-table__header">Action</th>
-                </tr>
-            </thead>
-            <tbody class="govuk-table__body">
-                @foreach (var item in @Model.Services)
-                {
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">@item.Name</th>
-                        <td class="govuk-table__cell">@item.Description</td>
-                        <td class="govuk-table__cell">@item.Status</td>
-                        <td class="govuk-table__cell">
-                            @*<a asp-page="/OrganisationAdmin/ServiceName" asp-route-id="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>*@
-                            <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>
-                        </td>
-                    </tr>
-                }
-        </tbody>
-    </table>
 
 </main>
