Organisation name fixed (temp)

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
@@ -8,9 +8,7 @@
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            @*<h1 class="govuk-heading-xl">@Model.OrganisationViewModel.Name</h1>*@
-            <h1 class="govuk-heading-xl">Home-Start Tower Hamlets</h1>
-
+            <h1 class="govuk-heading-xl">@Model.OrganisationViewModel.Name</h1>
 
             <input asp-for="@Model.StrOrganisationViewModel" type="hidden" >
 
