--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
@@ -8,7 +8,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
-                <div class="govuk-form-group @(Model.validationValid == false ? "govuk-form-group--error" : "")">
+                <div class="govuk-form-group @(Model.ValidationValid == false ? "govuk-form-group--error" : "")">
                     <fieldset class="govuk-fieldset">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-fieldset__heading">
@@ -24,7 +24,7 @@
                             Select all that apply.
                         </div>
                         @{
-                            if (Model.validationValid == false)
+                            if (Model.ValidationValid == false)
                             {
                                 <p class="govuk-error-message">
                                     <span class="govuk-visually-hidden">Error:</span> You must select one or more options
