Spelling mistake corrected.

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
@@ -59,7 +59,7 @@
                                 if (Model.TownCityValid == false)
                                 {
                                     <p class="govuk-error-message">
-                                        <span class="govuk-visually-hidden">Error:</span> Town ir city is required
+                                        <span class="govuk-visually-hidden">Error:</span> Town or city is required
                                     </p>
                                 }
                             }
