Labels for attributes fixed

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
@@ -30,13 +30,13 @@
                         <div class="govuk-radios" data-module="govuk-radios">
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="Familychoice" name="Familychoice" type="radio" value="Yes">
-                                <label class="govuk-label govuk-radios__label" for="family-choice">
+                                <label class="govuk-label govuk-radios__label" for="Familychoice">
                                     Yes, they can choose where
                                 </label>
                             </div>
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input" id="Familychoice2" name="Familychoice" type="radio" value="No">
-                                <label class="govuk-label govuk-radios__label" for="Familychoice">
+                                <label class="govuk-label govuk-radios__label" for="Familychoice2">
                                     No, they cannot choose where
                                 </label>
                             </div>
