--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
@@ -1,1 +1,6 @@
-﻿@import "patterns/cards";
+﻿//Patterns
+@import "patterns/cards";
+
+//Pages
+@import "pages/InPersonWhere";
+@import "pages/delivery-type";
