Correct styling and validation

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
@@ -1,6 +1,10 @@
 ﻿//Patterns
 @import "patterns/cards";
 
+//Components
+@import "../node_modules/@ministryofjustice/frontend/moj/components/add-another/add-another";
+
 //Pages
 @import "pages/InPersonWhere";
 @import "pages/delivery-type";
+@import "pages/WhatLanguage";
