--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/WhatLanguage.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/WhatLanguage.cshtml
@@ -10,38 +10,48 @@
         <div class="govuk-grid-column-two-thirds">
             <div data-module="moj-add-another">
                 <form method="post">
-                    <div class="govuk-form-group @(Model.ValidationValid == false ? "govuk-form-group--error" : "")">
+                    <div class="govuk-form-group--add-another-language @(Model.ValidationValid == false ? "govuk-form-group--error" : "")">
 
                         <h2 class="govuk-heading-l moj-add-another__heading" tabindex="-1">Which language is the service offered in?</h2>
 
                         <input asp-for="@Model.StrOrganisationViewModel" type="hidden">
                         <input asp-for="@Model.LanguageNumber" type="hidden">
 
-                        @{
-                            if (Model.ValidationValid == false)
-                            {
-                                <p class="govuk-error-message">
-                                    <span class="govuk-visually-hidden">Error:</span> Please select a language
-                                </p>
-                            }
-                        }
-
                         @for (int i = 0; i < @Model.LanguageNumber; i++)
                         {
+
                             @*<partial name="_WhichLanguage" model="@Model.Languages[i]" />*@
                             <fieldset class="govuk-fieldset moj-add-another__item">
+                                @{
+                                    if (Model.AllLanguagesSelected == false && Model.LanguageNotSelectedIndex == i)
+                                    {
+                                        <p class="govuk-error-message">
+                                            <span class="govuk-visually-hidden">Error:</span> Please select a language
+                                        </p>
+                                    }
+                                }
+
+                                @{
+                                    if (Model.NoDuplicateLanguages == false && Model.LanguageNotSelectedIndex == i)
+                                    {
+                                        <p class="govuk-error-message">
+                                            <span class="govuk-visually-hidden">Error:</span> Please select a different language
+                                        </p>
+                                    }
+                                }
+
                                 <div class="govuk-form-group">
                                     <label for="chooseLanguage1" class="govuk-label">Select a language</label>
                                     <select class="govuk-select" id="LanguageCode" name="LanguageCode" asp-for="@Model.LanguageCode[i]" asp-items="@Model.LanguageSelectionList"></select>
                                 </div>
-                            </fieldset>
 
-                            if (i > 0)
-                            {
-                                <div class="moj-button-action">
-                                    <button asp-page-handler="RemoveLanguage" asp-route-id="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4" data-module="govuk-button">Remove</button>
-                                </div>
-                            }
+                                @if (@Model.LanguageNumber > 1)
+                                {
+                                    <div class="moj-button-action">
+                                        <button asp-page-handler="RemoveLanguage" asp-route-id="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button" data-module="govuk-button">Remove</button>
+                                    </div>
+                                }
+                            </fieldset>
                         }
                     </div>
 
